welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: not found: value tab
	for (i<-0 to tab.length-1) {
                     ^